--- a/templates/index2.html
+++ b/templates/index2.html
@@ -34,20 +34,6 @@
             </tr>
         </tbody>
     </table>
-    <!--
-    <div class="row">
-        <div class="col-sm-1 text-primary  font-weight-bold" id="dias_restantes">-</div>
-        <div class="col-sm-1 text-primary  font-weight-bold" id="horas_restantes">-</div>
-        <div class="col-sm-1 text-primary  font-weight-bold" id="minutos_restantes">-</div>
-        <div class="col-sm-1 text-primary  font-weight-bold" id="segundos_restantes">-</div>
-    </div>
-    <div class="row">
-        <div class="col-sm-1">DÍAS</div>
-        <div class="col-sm-1">HS</div>
-        <div class="col-sm-1">MIN</div>
-        <div class="col-sm-1">SEG</div>
-    </div>
-    -->
 </div>
 
 <!--
@@ -57,19 +43,24 @@
 </div>
 {% endif %}
 
+
+-->
 <div class="selector-rondas">
-    <ul class="menu-rondas">
+    <ul class="nav nav-tabs">
         {% for r in rondas %}
         <li
+        class="nav-item"
+        ><a
         {% if ronda.ronda == r.ronda %}
-        class="seleccionada"
+            class="nav-link active"
+        {% else %}
+            class="nav-link"
         {% endif %}
-        ><a href="/?ronda={{r.ronda}}">{{r.ronda}}</a> </li>
+            href="/?ronda={{r.ronda}}">{{r.ronda}}</a> </li>
         {% endfor %}
     </ul>
 </div>
 
--->
 {% include "rondas2.html" %}
 
 {% endblock %}
