--- a/templates/reglas2.html
+++ b/templates/reglas2.html
@@ -3,46 +3,64 @@
 {% block body_content %}
 <h2>Reglas</h2>
 
-<div class="text-left row">
+<div class="text-left row reglas">
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
+        <h3>Generales</h3>
 <ol>
-    <li>Los resultados se podrán completar hasta 1 hora antes del primer partido del mundial. Los resultados para las rondas de la llave (8vos/4tos/Semi/Final) se podrán cargar hasta 1 hora antes del primer partido de la ronda.</li>
-    <li>El costo para participar es de $300 por persona. Se abona una sola vez para todo el mundial.</li>
-    <li>El dinero recaudado es totalmente repartido en premios. El participante que haga mas puntos, se llevará el 75% del total recaudado.  Para el segundo 15%, y para el tercero 10%.</li>
+    <li>Este es <b>un prode recreativo hecho entre amigos</b>, con el fin de divertirnos y ponerle un plus al sentimiento del Mundial, por lo que se da por sentado que la Organización
+actúa de buena fe.</li>
+    <li>El costo para participar es de <b>$300 por persona</b>. Se abona una sola vez para todo el mundial. El pago puede realizarse en efectivo, por mercado pago o vía transferencia bancaria.</li>
+    <li><b>El dinero recaudado es totalmente repartido en premios.</b> El participante que haga mas puntos, se llevará el <b>70%</b> del total recaudado.  Para el segundo <b>20%</b>, y para el tercero <b>10%</b>.</li>
     <li>El que no cargue los resultados a tiempo, no podrá participar de esa ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
-    <li>En caso de que haya empate en las primeras tres posiciones, se resolverá según quien haya hecho mas puntos con los RESULTADOS DE LA PRIMER RONDA. En caso de seguir empatados, se dividirán en partes iguales.</li>
-    <li>Para demostrar la LEGALIDAD de los puntajes, cada uno podrá controlar el puntaje de todos los participantes.</li>
-    <li>Las posiciones se actualizarán diariamente y podrán ser vistas desde el sitio.</li>
-    <li>Puede participar cualquiera, mientras cumpla con las condiciones mencionadas arriba.</li>
-    <li>Pueden invitar a cualquier amigo/conocido/etc, pero serán uds. los responsables de recaudar la plata de cada uno de ellos.</li>
+    <li>Para participar hay que registrarse y cargar los resultados en este sitio (<a href="https://elprodedelmundial2018.appspot.com">https://elprodedelmundial2018.appspot.com</a>)</li>
+    <li>Para el registro se solicitará un mail y un celular solo para los fines de contacto e información sobre el prode. Es posible que la Organización coordine un grupo de difusión vía Whatsapp para recordar límites de carga de Planillas, Ganadores y cualquier otra aclaración que sea necesaria. </li>
+</ol>
+<h3>Carga de pronósticos</h3>
+<ol>
+    <li>EL tiempo para cargar los resultados por fase está estipulado en el contador del sitio. <b>Una vez pasado el tiempo ya no se podrán cargar los resultados.</b></li>
+    <li>Se deben cargar resultados para <b>cada fase</b> (Primera Ronda/ 8vos / 4 tos / Semi / Final), para lo cual hay que estar atento al contador en todas las fases. No es excluyente participar de todas las rondas, aunque en las rondas donde no participe no sumara puntos.</li>
+    <li>Los resultados reales se irán actualizando en el sitio junto con la tabla de posiciones.</li>
+    <li>Para demostrar la LEGALIDAD de los puntajes, cada uno podrá controlar el puntaje de todos los participantes (una vez cerrado el período de carga de resultados para esa ronda).</li>
+</ol>
+
+<h3>Puntajes</h3>
+    <ol>
     <li>
     Los puntajes se calculan de la siguiente manera:
     <ul>
-        <li>Acertar el resultado final de un partido: 30 puntos.</li>
-        <li>Acertar el marcador de un partido: 15 puntos. Ej: Si se marca que Rusia ganará 4-0 a Arabia Saudita y el partido termina 2-1 en favor a Rusia, se sumarán 15 puntos (por acertar que Rusia gana). Si el partido termina 4-0 en favor a Rusia, además de los 15 puntos se sumarán 30 por acertar el marcador. Pero si ese partido Rusia lo pierde o empata, no se suma ningún punto.</li>
-        <li>Acertar quien mete el primer gol de cada partido: 5 puntos.</li>
-        <li>En los partidos donde juegue Argentina, los puntos valen doble.</li>
+        <li>Acertar el resultado final de un partido: <b>30 puntos.</b></li>
+        <li>Acertar el marcador de un partido: <b>15 puntos.</b> Ej: Si se marca que Rusia ganará 4-0 a Arabia Saudita y el partido termina 2-1 en favor a Rusia, se sumarán 30 puntos (por acertar que Rusia gana - resultado). Si el partido termina 4-0 en favor a Rusia, además de los 30 puntos se sumarán 15 por acertar el marcador. Pero si ese partido Rusia lo pierde o empata, no se suma ningún punto.</li>
+        <li>Acertar quien mete el primer gol de cada partido: <b>10 puntos.</b> En el caso de que el resultado sea 0-0, nadie sumará puntos.</li>
+        <li><b>En los partidos donde juegue Argentina, los puntos valen doble</b> (tanto para resultado, marcador y primer gol).</li>
         <li>Se sumarán puntos extras en caso de acertar quién es el campeón, segundo, tercer y cuarto puesto, goleador del campeonato, goleador de Argentina y cuál será la posición final de Argentina. Los puntajes se determinarán de la siguiente manera:
         <ul>
             <li>Campeón: 100 puntos.</li>
             <li>Segundo: 80 puntos.</li>
-            <li>Tercero: 60 puntos.</li>
-            <li>Cuarto: 50 puntos.</li>
+            <li>Tercero: 70 puntos.</li>
+            <li>Cuarto: 60 puntos.</li>
             <li>Goleador 1: 100 puntos.</li>
             <li>Goleador 2: 70 puntos.</li>
             <li>Goleador Argentina: 50 puntos.</li>
             <li>Posición Argentina: 100 puntos.</li>
+            <li>Mejor jugador: 100 puntos.</li>
         </ul>
         En el caso de goleador op. 1 y goleador op. 2 se busca acertar quién será el goleador del campeonato dando 2 opciones. Por ejemplo, si en goleador op. 1 elijo a Kempes y en goleador op. 2 a Luque, si sale goleador Kempes ganaré 100 puntos, mientras que si el goleador es Luque, sólo 70 puntos. Si otra persona es goleador, no sumaré puntos.
         </li>
+        <li> La definición del goleador y MVP del mundial es el determinado por la FIFA. En caso de empate de entre dos o más goleadores, se contemplarán válidas las opciones que contemplen uno u otro.</li>
+        <li>En caso que haya empate en las primeras tres posiciones del prode, se resolverá según quien haya hecho más puntos con la carga inicial de resultados (etapa de grupos, teniendo en cuenta los puntos extras). En caso de seguir empatados, se dividirán en partes iguales.</li>
     </ul>
     </li>
+    </ol>
+    <h3>Consideraciones finales</h3>
+    <ol>
+    <li>Puede participar cualquiera, mientras cumpla con las condiciones mencionadas arriba.</li>
+    <li>Pueden e INVITEN a amigos/compañeros de trabajo/flia/etc, cuantos más seamos mejor! Más premios para los ganadores! Pero serán uds. los responsables de asegurar el pago a la inscripción del prode.</li>
     <li>Por cualquier duda, comentario o propuesta que surja, lo mismo para cualquier error que detecten en el calculo de los puntos, sin duda enviar un mail a la dirección del Prode del mundial: <a href="mailto:prodemundialok2018@gmail.com">prodemundialok2018@gmail.com</a></li>
 </ol>
 
 <p>
-Esperamos que todos podamos disfrutar de este Prode, que fue creado con el fin del entretenimiento y no del lucro...
+Esperamos que todos podamos disfrutar de este Prode, que fue creado con el fin del entretenimiento y no del lucro.
 </p>
 
 <p>
