--- a/static/stylesheets/estudioindex.css
+++ b/static/stylesheets/estudioindex.css
@@ -17,12 +17,10 @@ body{
 	background-repeat:repeat;
 	font-size: 62.5%
 }
-
-.reglas {
-    color:#dddddd;
-    font-size: 150%;
+.wrapper{
+    width: 95%;
+    margin: 0 auto;
 }
-
 .btn, a , .btn-fwc, button {
 	-webkit-transition: All ease-out .5s;
 	-moz-transition: All ease-out .5s;
@@ -152,7 +150,7 @@ form.text-left h2{
 	width:20px;
 	height:40px;
 	top:0px;
-	background-image:url(..///images/btn-sprite.svg);
+	background-image:url(/images/btn-sprite.svg);
 	background-size:41px auto;
 	background-position:0px 0;
 	float:left;
@@ -165,7 +163,7 @@ form.text-left h2{
 	width:20px;
 	height:40px;
 	top:0px;
-	background-image:url(..///images/btn-sprite.svg);
+	background-image:url(/images/btn-sprite.svg);
 	background-size:41px auto;
 	background-position:-20px 0;
 	float:left;
@@ -222,47 +220,47 @@ ul.redes li a:hover i{
 	
 	0%{
 	
-	background-image:url(../images/maradona-mundial-1986-copa.jpg);
+	background-image:url(/images/maradona-mundial-1986-copa.jpg);
 	
 	}
 	
 	20%{
 	
-	background-image:url(../images/maradona-mundial-1986-copa.jpg);
+	background-image:url(/images/maradona-mundial-1986-copa.jpg);
 	
 	}
 	
 	25%{
 	
-	background-image:url(../images/pele.jpg);
+	background-image:url(/images/pele.jpg);
 	
 	}
 	
 	45%{
 	
-	background-image:url(../images/pele.jpg);
+	background-image:url(/images/pele.jpg);
 	
 	}
 	
 	50%{
 	
-	background-image:url(../images/alemania.jpg);
+	background-image:url(/images/alemania.jpg);
 	
 	}
 	95%{
 	
-	background-image:url(../images/alemania.jpg);
+	background-image:url(/images/alemania.jpg);
 	
 	}
 	100%{
 	
-	background-image:url(../images/maradona-mundial-1986-copa.jpg);
+	background-image:url(/images/maradona-mundial-1986-copa.jpg);
 	
 	}
 }
 
 .jumbotron{
-	/*background-image:url(../images/maradona-mundial-1986-copa.jpg);*/
+	/*background-image:url(/images/maradona-mundial-1986-copa.jpg);*/
 	background-size:cover;
 	background-position:center center;
 	background-color:transparent;
@@ -299,7 +297,32 @@ ul.redes li a:hover i{
 	  text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.8);
 	  z-index:2;
 }
-.col-sm-12 {
+/*-----------PARTIDOS----*/
+form.partidos {
+    text-align: center;
+	padding-bottom:50px;
+}
+section#resultados{
+	text-align:center;
+}
+section#resultados .wrapper{
+	width:100%;
+}
+.grupo {
+	display:inline-block;
+    padding: 5px;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#afa374+0,958a60+100 */
+background: rgb(175,163,116); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(175,163,116,1) 0%, rgba(149,138,96,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(175,163,116,1) 0%,rgba(149,138,96,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(175,163,116,1) 0%,rgba(149,138,96,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#afa374', endColorstr='#958a60',GradientType=0 ); /* IE6-9 */
+border:0 !important;
+ margin:0 auto;
+ width:calc(50% - 40px);
+ margin:20px;
+}
+.grupo .content {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
@@ -308,8 +331,23 @@ ul.redes li a:hover i{
     background: -webkit-linear-gradient(top, rgba(20,88,168,1) 0%,rgba(5,24,81,1) 100%);
     background: linear-gradient(to bottom, rgba(20,88,168,1) 0%,rgba(5,24,81,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1458a8', endColorstr='#051851',GradientType=0 );
-	padding:40px;
-	box-sizing:border-box;
+    padding: 40px;
+    box-sizing: border-box;
+}
+.grupo ol{
+	padding:0;
+}
+.grupo ol li{
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;
+  text-align:center;
+  margin-bottom:20px;
+  align-items:center;
+}
+.grupo ol li .col{
+	display:inline-block;
 }
 .grupo h3{
 	font-family: 'dusha_plusregular', sans-serif !important;
@@ -323,9 +361,8 @@ ul.redes li a:hover i{
 	padding:20px;
 	position:relative;
 	padding-bottom:25px;
-}
-.grupo h3:before{
-	content:"";
+	text-align:center;
+	margin-bottom: 20px;
 }
 .grupo h3:after {
     content: "";
@@ -342,62 +379,138 @@ ul.redes li a:hover i{
     -o-transform: translateX(-50%);
     bottom: 10px;
 }
-.grupo .row.mt-2.mb-2.pt-2.pb-2.bg-light{
-	background-color:transparent !important;
-}
-.grupo .col-sm-3{
-	display:-ms-flex;
-	display:flex;
-    justify-content:center;
-	flex: 0 0 35%;
-    max-width: 35%;
-}
-.grupo .col-sm-2{
-	flex: 0 0 10%;
-    max-width: 10%;
-}
-.grupo .col-sm-1{
-	flex: 0 0 5%;
-    max-width: 5%;
-}
-.grupo .col-sm-3 img{
-	width:auto;
-	height:20px;
-	vertical-align:baseline;
-}
-.grupo .col-sm-3 span{
-	line-height:20px;
-	color:#FFF;
-	font-size:1.8em;
-	padding-left:10px;
-}
-.grupo .row {
-    margin-right: 0px;
-    margin-left: 0px;
-}
-form.partidos .row {
-    margin: 0;
-}
-.grupo {
-    padding: 10px;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#afa374+0,958a60+100 */
-background: rgb(175,163,116); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(175,163,116,1) 0%, rgba(149,138,96,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(175,163,116,1) 0%,rgba(149,138,96,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(175,163,116,1) 0%,rgba(149,138,96,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#afa374', endColorstr='#958a60',GradientType=0 ); /* IE6-9 */
-border:0 !important;
-}
+
 .grupo input[type=checkbox], .grupo input[type=radio] {
     box-sizing: border-box;
     padding: 0;
     font-size: 20px;
     margin: 0;
     padding-top: 10px;
-    top: 9px;
     display: inline-block;
-    position: relative;
 }
+.grupo span {
+    line-height: 110%;
+    color: #FFF;
+    font-size: 1.4em;
+}
+.grupo .colFlag img{
+	width:60px;
+	height:auto;
+	vertical-align:middle;
+	padding-right:8px;
+}
+.grupo .colFlag2 img{
+	width:60px;
+	height:auto;
+	vertical-align:middle;
+	padding-left:8px;
+}
+.grupo ol li .colPais{
+	text-align:left;
+}
+.grupo ol li .colPais2{
+	text-align:right;
+}
+.grupo ol li .colPais, .grupo ol li .colPais2{
+	width:calc(50% - 80px);
+}
+.grupo ol li .colInput{
+	width:48px;
+	margin:0 2px;
+}
+.grupo ol li .colRadio{
+	width:30px;
+
+}
+.grupo .form-control {
+    padding: 5px;
+}
+/*---------------------EXTRAS*/
+section#extras .wrapper{
+	width:100%;
+	padding:0 20px;
+}
+.displayFlex{
+	  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;
+  justify-content:space-between;
+  flex-wrap:wrap;
+}
+section#extras article{
+	position:relative;
+	padding:40px;
+	width:calc(33.33% - 20px);
+	display:inline-block;
+	height:300px;
+	background-size:cover;
+	    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.5);
+		margin-bottom:30px;
+		text-align:left;
+}
+section#extras article .content{
+	position:relative;
+	z-index:2;
+	box-sizing:border-box;
+}
+article#campeon{
+	background-position:center top;
+	background-image:url(/images/maradona86.jpg);
+}
+article#segundo{
+	background-position:center top;
+	background-image:url(/images/holanda2010.jpg);
+}
+article#tercero{
+	background-position:center top;
+	background-image:url(/images/abreu2010.jpg);
+}
+article#cuarto{
+	background-position:center top;
+	background-image:url(/images/italia2010.jpg);
+}
+article#goleador1{
+	background-position:center top;
+	background-image:url(/images/ronaldo2002.jpg);
+}
+article#goleador2{
+	background-position:center top;
+	background-image:url(/images/klose2014.jpg);
+}
+article#goleadorArgentina{
+	flex:1;
+	margin-right:30px;
+	background-position:center top;
+	background-image:url(/images/messi2018.jpg);
+}
+article#puestoArgentina{
+	flex:1;
+	background-position:center top;
+	background-image:url(/images/argentina2018.jpg);
+}
+section#extras article:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+section#extras article .content h2{
+	line-height:100%;
+	margin:0;
+	padding:0;
+}
+section#extras article .content span{
+	color:#FFF;
+	font-size:14px;
+	text-transform:uppercase;
+}
+/*----------------*/
 .nav-tabs .nav-item.user{
 	background-color:#bcb187;
 }
@@ -407,6 +520,452 @@ border:0 !important;
 .text-primary {
     color: #FFF !important;
 }
+
+/*-------------------------*/
 .table td, .table th {
     color: #FFF;
+}
+.flagMobile{
+	display:none;
+}
+/*-----------------------------*/
+@media screen and (max-width: 800px){
+article.grupo {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 20px;
+}
+.grupo .content {
+    padding: 20px;
+}
+section#resultados .wrapper {
+    width: 95%;
+}
+.flagMobile{
+	display:inline-block;
+	width:40px;
+	padding: 0;
+    margin-bottom: 5px;
+}
+.colFlag, .colFlag2{
+	display:none;
+}
+section#extras article {
+    width: 100%;
+	margin:0;
+	margin-bottom:20px;
+}
+.logo img {
+    width: auto;
+    height: 45px;
+    vertical-align: middle;
+    padding-left: 15px;
+    padding-top: 5px;
+}
+.texto {
+    width: 100%;
+}
+/*------------------------------------------------------------------MENU SIDE*/
+.menuSlide {
+	display: none;
+}
+.jumbotron, .rowTop,  .title, footer, form.partidos {
+transition: all .5s cubic-bezier(.645,.045,.355,1);
+}
+.menuSlide span.label {
+	display: none;
+	position: absolute;
+	text-transform: uppercase;
+	font-weight: 400;
+	text-indent: 0;
+	font-size: 1em;
+	text-rendering: auto;
+	-webkit-font-smoothing: initial;
+	height: 52px;
+	line-height: 52px;
+	padding: 0;
+	margin: 0;
+	background: rgba(255,255,255,0);
+	opacity: 1;
+	visibility: visible;
+	color: #1D1D1F;
+	transition: all 250ms cubic-bezier(.25,.46,.45,.94);
+	top:0;
+	left:53px;
+}
+.menuSlide {
+	position: absolute;
+	text-decoration: none;
+	padding: 0;
+	outline: 0;
+	text-indent: -9999px;
+	background-color: #0098DC;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	margin: 0;
+	width: 50px;
+	height:50px;
+	background-size: 18px 14px;
+	transition: opacity 400ms cubic-bezier(.645,.045,.355,1) 250ms,left .4s cubic-bezier(.25,.46,.45,.94);
+	background-image: url(/images/menu.png);
+	background-repeat:no-repeat;
+	background-position:center center;
+	border:none;
+	border-right:0;
+	opacity: 1;
+}
+.menuSlide:hover span.label {
+	opacity: 1;
+	visibility: visible;
+	transition: all 250ms cubic-bezier(.55,.085,.68,.53);
+}
+#sidemenu {
+	display: block;
+	position: fixed;
+	width: 281px;
+	height: auto;
+	background:rgba(5,24,81,.9);
+	left: 0;
+	top: 0;
+	bottom: 0;
+	letter-spacing: .1875rem;
+	overflow: hidden;
+	min-height: 500px;
+	z-index: 100;
+	margin-top: 0!important;
+	-webkit-transform: translate3d(-281px,0,0);
+	transform: translate3d(-281px,0,0);
+	-webkit-transition: All ease-out 0.5s;
+	-moz-transition: All ease-out 0.5s;
+	-o-transition: All ease-out 0.5s;
+	transition: All ease-out 0.5s;
+}
+body.open #sidemenu{
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
+#contentAside{
+	position: absolute;
+	height:calc(100% - 70px);
+	top: 0px;
+	left: -100px;
+	opacity: 0;
+	display: block;
+	margin: 0;
+   -webkit-transition: All ease-out 0.5s;
+	-moz-transition: All ease-out 0.5s;
+	-o-transition: All ease-out 0.5s;
+	transition: All ease-out 0.5s;
+	width:100%;
+	padding-bottom:100px;
+	overflow-y: scroll;
+}
+.topBack {
+	height: 50px;
+	padding:0 20px;
+	border-bottom:thin solid #555;
+}
+span.btnBack {
+    display: inline-block;
+    line-height: 50px;
+    color: #EEE;
+    font-size: 1.1em;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    width: calc(100% - 50px);
+}
+body.open #sidemenu #contentAside{
+	opacity: 1;
+	left: 0;
+	transition: all 650ms ease 150ms;
+}
+.overlay {
+	display: block;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	z-index: 99;
+	background: rgba(29,29,31,.6);
+	visibility: hidden;
+	opacity: 0;
+	transition: all .5s cubic-bezier(.645,.045,.355,1);
+}
+body.open .overlay {
+	visibility: visible;
+	opacity: 1;
+	transition: all .5s cubic-bezier(.645,.045,.355,1);
+}
+body.open {
+	overflow: hidden;
+	-ms-touch-action: pan-x;
+	touch-action: pan-x;
+}
+body.open .jumbotron, body.open .rowTop, body.open .title, body.open footer, body.open form.partidos  {
+	-webkit-transform: translate3d(281px,0,0);
+	transform: translate3d(281px,0,0);
+	transition: all 650ms ease 150ms;
+}
+
+body.open #sidemenu .footerS {
+	bottom: 0;
+	transition: all 350ms cubic-bezier(.25,.46,.45,.94) 350ms;
+}
+#sidemenu .footerS {
+	display: block;
+	position: absolute;
+	width: 281px;
+	height: 52px;
+	border-top: 1px solid #333335;
+	bottom: -52px;
+	transition: all 350ms cubic-bezier(.25,.46,.45,.94);
+	background-color: #1D1D1F;
+}
+#sidemenu .footerS a {
+	color: #BCBCBC;
+}
+#sidemenu .footerS button {
+	display: block;
+	position: relative;
+	transition: all 300ms cubic-bezier(.25,.46,.45,.94);
+	outline: 0;
+	background: 0 0;
+	color: #BCBCBC;
+	height: 52px;
+	margin: 0;
+	padding: 0;
+	line-height: 52px;
+	border: none;
+	border-right: 1px solid #333;
+	width: 93px;
+	text-align: center;
+	float: left;
+	font-size: 1rem;
+	overflow: hidden;
+}
+#sidemenu .footerS button>span {
+	pointer-events: none;
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	transition: top .35s cubic-bezier(.455,.03,.515,.955);
+	top: 0;
+	left: 0;
+}
+#sidemenu .footerS button>span.hover {
+	top: 100%;
+}
+#sidemenu .footerS button:hover {
+	background-color: #000;
+	color: #FFF;
+}
+#sidemenu .footerS button:not(.disabled):not([disabled]):not(.active):hover>span {
+	top: -100%;
+}
+#sidemenu .footerS button:not(.disabled):not([disabled]):not(.active):hover>span.hover {
+	top: 0;
+}
+#sidemenu .footerS i{
+	font-size:22px;
+	line-height: 50px;
+}
+#sidemenu h2{
+	color:#FFF;
+	font-size:1.6em;
+	padding:0 50px;
+	padding-bottom:30px;
+}
+#sidemenu ul{
+	padding:20px 30px;
+}
+#sidemenu ul li{
+	padding:5px 0;
+}
+#sidemenu li a{
+	color:#FFF;
+	font-size:1.2em;
+	text-transform:uppercase;
+	letter-spacing:1px;
+}
+#sidemenu li ul{
+	padding:10px 0;
+	padding-left:15px;
+}
+#sidemenu li ul a{
+	font-size:12px;
+	color:#FFF;
+}
+.menuSlide {
+    display: block;
+}
+.rowTop {
+    position: fixed;
+    z-index: 11;
+    top: 0;
+    left: 0;
+}
+.title {
+    width: calc(100% - 50px);
+    position: fixed;
+    z-index: 5;
+    top: 0;
+    right: 0;
+    padding: 0;
+    background: rgb(20,88,168);
+    background: -moz-linear-gradient(top, rgba(20,88,168,1) 0%, rgba(5,24,81,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(20,88,168,1) 0%,rgba(5,24,81,1) 100%);
+    background: linear-gradient(to bottom, rgba(20,88,168,1) 0%,rgba(5,24,81,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1458a8', endColorstr='#051851',GradientType=0 );
+	    height: 50px;
+    overflow: hidden;
+}
+ul.redes {
+    display: none;
+}
+.title h1 {
+	display:inline-block;
+    font-size: 2em;
+}
+.title h3 {
+    font-size: 1.4em;
+}
+.title h4{
+	display:none;
+}
+ul.nav.nav-tabs {
+    display: none;
+}
+.jumbotron {
+    margin-top: 48px;
+}
+.cd-accordion-menu ul {
+	/* by default hide all sub menus */
+	display: none;
+}
+.cd-accordion-menu li {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	position: relative;
+}
+.cd-accordion-menu a {
+	position: relative;
+	display: block;
+}
+.cd-accordion-menu li.has-children label::before {
+	/* icons */
+	content: '';
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	position: absolute;
+	top: 5px;
+	right: 10px;
+}
+.cd-accordion-menu li.has-children > label::before {
+	background-image: url(/images/cd-icons.png);
+	background-repeat: no-repeat;
+}
+.cd-accordion-menu li.has-children label::before {
+	/* arrow icon */
+	right: 10px;
+	background-position: 0 0;
+	-webkit-transform: rotate(-90deg);
+	-moz-transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	-o-transform: rotate(-90deg);
+	transform: rotate(-90deg);
+}
+.cd-accordion-menu input[type=checkbox]:checked + label::before {
+	/* rotate arrow */
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-ms-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+}
+.cd-accordion-menu input[type=checkbox]:checked + label + ul, .cd-accordion-menu input[type=checkbox]:checked + label:nth-of-type(n) + ul {
+	/* use label:nth-of-type(n) to fix a bug on safari (<= 8.0.8) with multiple adjacent-sibling selectors*/
+  /* show children when item is checked */
+	display: block;
+}
+.cd-accordion-menu ul a {
+	padding-right: 0px;
+}
+.no-touch .cd-accordion-menu ul a:hover, .no-touch .cd-accordion-menu ul a:hover {
+	background:none;
+}
+.cd-accordion-menu > li:last-of-type > a, .cd-accordion-menu > li:last-of-type > a, .cd-accordion-menu > li > ul > li:last-of-type a, .cd-accordion-menu > li > ul > li:last-of-type a {
+	box-shadow: none;
+}
+.cd-accordion-menu ul a::before {
+	right: 36px;
+}
+.cd-accordion-menu ul ul a {
+	padding-right: 50px;
+}
+.cd-accordion-menu ul ul label::before {
+	right: 54px;
+}
+.cd-accordion-menu ul ul label::after {
+	right: 77px;
+}
+.cd-accordion-menu ul ul ul a {
+	padding-right: 68px;
+}
+.cd-accordion-menu ul ul ul label::before {
+	right: 72px;
+}
+.cd-accordion-menu.animated li.has-children label::before {
+	/* this class is used if you're using jquery to animate the accordion */
+	-webkit-transition: -webkit-transform 0.3s;
+	-moz-transition: -moz-transform 0.3s;
+	transition: transform 0.3s;
+}
+.cd-accordion-menu li {
+	position: relative;
+	margin-bottom:10px;
+}
+.cd-accordion-menu li li {
+	margin-bottom:5px;
+}
+.cd-accordion-menu input[type=checkbox] {
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 40px;
+	height: 30px;
+	z-index: 10;
+	opacity: 0;
+}
+.cd-accordion-menu i {
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 40px;
+	height: 30px;
+}
+.cd-accordion-menu label {
+    margin-bottom: 0;
+}
+#sidemenu ul li:last-child {
+    border-top: thin solid #FFF;
+    padding-top: 20px;
+    margin-top: 20px;
+}
+#sidemenu ul li li:last-child {
+    border-top: 0;
+    padding-top: 0px;
+    margin-top: 0px;
+}
+#sidemenu ul li:last-child a{
+color:#bcb187;
+}
+#sidemenu ul li li:last-child a{
+color:#FFF;
+}
 }
