--- a/static/stylesheets/estudioindex.css
+++ b/static/stylesheets/estudioindex.css
@@ -987,4 +987,12 @@ color:#FFF;
 .container.text-center{
 	padding:0 !important;
 }
+form.text-left {
+    padding-top: 50px;
+}
+form .col-sm-7 {
+    -ms-flex: 1;
+    flex: 1;
+    max-width: none;
+}
 }
